<resources>
    <string name="app_name">Movies Hub</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By :</string>
    <string name="text_popular">Most Popular</string>
    <string name="text_top_rated">Top Rated</string>
    <string name="image_unavailable">Image not available</string>
    <string name="plot_summary">Plot Summary</string>
    <string name="transition_name">Image Transition</string>
    <string name="movie_poster_description">image of the movie</string>
    <string name="image_star">Image with star for rating</string>
    <string name="image_horizontal_line">Image for horizontal line to divide plot summary from other details</string>
    <string name="cast_content_description">This is to display the cast of the @string/movie_poster_description</string>
    <string name="text_favorites">Favorites</string>
    <string name="cast">Cast</string>
    <string name="trailer">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_play_icon">Trailer Play Icon</string>
    <string name="review_des">Image of the Reviewer</string>
    <string name="no_item">No items in favorites.\nAdd Your favorite movie from Details page.</string>
</resources>
